# fern-labour

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  alembic.ini  config.toml  deployment.md  docker-compose.frontend.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.traefik.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  release-notes.md
labour_service/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  config.toml  pyproject.toml
labour_service/app/: run_consumer.py
labour_service/app/api/routes/: router_api_v1.py
labour_service/app/common/domain/: producer.py
labour_service/app/notification/domain/: events.py
labour_service/app/setup/: settings.py
labour_service/app/setup/ioc/: di_component_enum.py  ioc_registry.py
labour_service/app/setup/readers/: toml.py
labour_service/app/subscription/domain/: entity.py  exceptions.py
labour_service/app/user/domain/: entity.py  exceptions.py
labour_service/scripts/: plot_dependencies.py
labour_service/src/: run_consumer.py
labour_service/src/admin/api/: routes.py
labour_service/src/admin/application/: contact_service.py
labour_service/src/api/: exception_handler.py
labour_service/src/api/routes/: router_api_v1.py
labour_service/src/common/domain/: entity.py  producer.py
labour_service/src/core/application/: domain_event_publisher.py  task_manager.py
labour_service/src/core/domain/: aggregate_root.py  producer.py
labour_service/src/core/infrastructure/: asyncio_task_manager.py
labour_service/src/labour/application/: exceptions.py
labour_service/src/notification/: events.py  notification_data.py
labour_service/src/notification/domain/: events.py
labour_service/src/payments/api/: requests.py  responses.py  routes.py
labour_service/src/setup/: app_factory.py  logs.py  settings.py
labour_service/src/setup/background_tasks/: background_task.py
labour_service/src/setup/ioc/: di_component_enum.py  ioc_registry.py
labour_service/src/subscription/api/: requests.py
labour_service/src/subscription/application/: dtos.py  exceptions.py
labour_service/src/subscription/domain/: entity.py  enums.py  events.py  exceptions.py  repository.py
labour_service/src/user/api/: responses.py
labour_service/src/user/domain/: exceptions.py  repository.py
labour_service/tests/unit/app/: test_run_consumer.py
rust_notification_service/: .env.example  Cargo.toml  Dockerfile
rust_notification_service/.sqlx/: query-b566d09558709d260dc6777ee3fe29590d0d6a25c089dc0a1d9d3f187414e9c2.json  query-b7b17a6e7ad99995cf4f285cb2fb87af45cca6cf5a65b2c0d867892326941429.json  query-b97aa33195a27f150cd0de05ae7ecebbb3e0c781b670450393767b90e97beefa.json
rust_notification_service/db-seed/: 01-tables.sql
rust_notification_service/src/: main.rs  openapi.json
rust_notification_service/src/api/: exception_handler.rs  mod.rs  router.rs
rust_notification_service/src/api/routes/: events.rs  mod.rs
rust_notification_service/src/api/schemas/: requests.rs
rust_notification_service/src/application/: dtos.rs  exceptions.rs  mod.rs
rust_notification_service/src/application/dtos/: event.rs  mod.rs  notification.rs  notification_content.rs
rust_notification_service/src/application/services/: mod.rs  notification_generation_service.rs  notification_service.rs  template_engine.rs
rust_notification_service/src/domain/: entity.rs  enums.rs  events.rs  exceptions.rs  mod.rs  repository.rs
rust_notification_service/src/infrastructure/: mod.rs  models.rs  notification_repository.rs
rust_notification_service/src/infrastructure/services/: mod.rs  notification_generation_service.rs  notification_service.rs
rust_notification_service/src/infrastructure/template_engines/: email_template_engine.rs  mod.rs  sms_template_engine.rs
rust_notification_service/src/setup/: app_state.rs  bootstrap.rs  config.rs
services/auth-service/: Cargo.toml  README.md  package.json  vitest.config.ts  wrangler.jsonc
services/auth-service/src/: lib.rs
services/auth-service/src/api/: router.rs
services/auth-service/src/application/: exceptions.rs  jwt_parser.rs  mod.rs  signature_verifier.rs
services/auth-service/src/domain/: exceptions.rs  mod.rs
services/auth-service/src/infrastructure/: jwt_parser.rs  mod.rs
services/auth-service/src/setup/: app_state.rs  config.rs
services/auth-service/test/: integration.spec.ts
services/contact-service/: Cargo.toml  README.md  package.json  vitest.config.ts  wrangler.jsonc
services/contact-service/migrations/: 001_contact_messages.sql  002_alter_created_at.sql
services/contact-service/src/: lib.rs
services/contact-service/src/api/: mod.rs  router.rs
services/contact-service/src/application/: dtos.rs  exceptions.rs
services/contact-service/src/domain/: entity.rs  enums.rs  exceptions.rs  repository.rs
services/contact-service/src/setup/: app_state.rs  config.rs
services/contact-service/test/: env.d.ts  integration.spec.ts
services/notification-service/: Cargo.toml  package-lock.json  package.json
services/notification-service/dispatch/: Cargo.toml  package.json  wrangler.dev.jsonc  wrangler.jsonc
services/notification-service/dispatch/migrations/: 0001_add_notification_external_id_lookup.sql
services/notification-service/dispatch/src/: lib.rs
services/notification-service/generation/: Cargo.toml  README.md  package.json  wrangler.dev.jsonc  wrangler.jsonc
services/notification-service/generation/src/: lib.rs
services/notification-service/generation/test/: integration.spec.ts
services/notification-service/notification/: Cargo.toml  README.md  package.json  wrangler.jsonc
services/notification-service/notification/src/: lib.rs
services/notification-service/notification/test/: integration.spec.ts
services/user-service/: Cargo.toml  README.md  package.json  vitest.config.ts  wrangler.jsonc
services/user-service/migrations/: 001_users.sql
services/user-service/src/api/: router.rs
(+2619 files in other folders)
