[workspace]
members = [
    "apps/labour/worker",
    "packages/labour-shared",
    "packages/event-sourcing-rs",
    "packages/workers-shared",
    "services/auth-service",
    "services/contact-service",
    "services/user-service",
    "services/notification-service/notification",
    "services/notification-service/generation",
    "services/notification-service/dispatch",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kieran Gray <gray.kieran@protonmail.com>"]

[workspace.dependencies]
worker = { version = "0.7", features = ['d1', 'queue'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.18", features = ["v7", "js", "serde"] }
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json', 'env-filter'] }
time = { version = "0.3", features = ['wasm-bindgen', 'serde', 'parsing', 'formatting'] }
strum = { version = "0.27.1", features = ['derive'] }
base64 = { version = "0.22.1" }
jwt-compact = { version = "0.8", features = ["rsa"] }
num-bigint-dig = "0.8"
wasm-bindgen = "0.2.106"
futures = "0.3.31"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
regex = "1.11.3"
anyhow = "1.0"

fern-labour-event-sourcing-rs = { path = "packages/event-sourcing-rs" }
fern-labour-workers-shared = { path = "packages/workers-shared" }
fern-labour-notifications-shared = { path = "packages/notifications-shared" }
fern-labour-labour-shared = { path = "packages/labour-shared" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
