[package]
name = "rust_notification_service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "=0.1.88"
axum = {version = "0.8.3"}
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
http-body-util = "=0.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "time",
    "chrono",
    "json",
] }
thiserror = "1.0.58"
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.16.0" , features = ["v7", "serde"] }
