[package]
name = "fern_labour_notification_dispatch"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing.workspace = true
tracing-web.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
worker.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
anyhow.workspace = true

fern-labour-notifications-shared.workspace = true
fern-labour-event-sourcing-rs.workspace = true
fern-labour-workers-shared.workspace = true
base64 = "0.22"
form_urlencoded = "1.2"
sendgrid = "0.24.1"
resend-rs = "0.19.0"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2" }

[dev-dependencies]
tokio = "1.47.1"
wiremock = "0.6.5"
