[package]
name = "fern_labour_notifications"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing.workspace = true
tracing-web.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
worker.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono.workspace = true
anyhow.workspace = true
futures.workspace = true
wasm-bindgen = "0.2.106"
http-body-util = "0.1"
serde_qs = "0.15.0"
base64 = "0.22"

fern-labour-notifications-shared.workspace = true
fern-labour-event-sourcing-rs.workspace = true
fern-labour-workers-shared.workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2" }

[dev-dependencies]
tokio = "1.47.1"
wiremock = "0.6.5"
